--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
             <h1 class="headline"><span class="font_style--orange">Vinyl</span><span class="font_style--white">Only</span></h1>
 
             <div class="main_img--mobile">
-                <img src="bilder/Vinyl_img_smart-pad@2x.png" class="hp_img--mobile" alt="Schallplatten haufen"/>
+                <img src="Bilder/Vinyl_img_smart-pad@2x.png" class="hp_img--mobile" alt="Schallplatten haufen"/>
             </div>
 
             <div class="main_img--pc">
-                <img src="bilder/Vinyl_img_pc@2x.png" class="hp_img--pc" alt="Schallplatten haufen">
+                <img src="Bilder/Vinyl_img_pc@2x.png" class="hp_img--pc" alt="Schallplatten haufen">
             </div>
 
             <div class="mainpage_text">
@@ -93,32 +93,32 @@
                 <ol class="slider">
                     <li>
                         <a href="shop.html">
-                            <img src="bilder/Gallery/Eminem.jpg" alt="Eminem Cover" id="1">
+                            <img src="Bilder/Gallery/Eminem.jpg" alt="Eminem Cover" id="1">
                         </a>
                     </li>
                     <li>
                         <a href="shop.html">
-                            <img src="bilder/Gallery/Camo&Krooked.jpg" alt="Camo & Krooked Cover" id="2">
+                            <img src="Bilder/Gallery/Camo&Krooked.jpg" alt="Camo & Krooked Cover" id="2">
                         </a>
                     </li>
                     <li>
                         <a href="shop.html">
-                            <img src="bilder/Kollektiv.jpg" alt="Kollektiv Turmstraße Album Cover" id="3">
+                            <img src="Bilder/Kollektiv.jpg" alt="Kollektiv Turmstraße Album Cover" id="3">
                         </a>
                     </li>
                     <li>
                         <a href="shop.html">
-                            <img src="bilder/Gallery/Lil_peep.jpg" alt="Lil Peep Album Cover" id="4">
+                            <img src="Bilder/Gallery/Lil_peep.jpg" alt="Lil Peep Album Cover" id="4">
                         </a>
                     </li>
                     <li>
                         <a href="shop.html">
-                            <img src="bilder/Gallery/yung_hurn.jpg" alt="Yung hurn Album Cover" id="5">
+                            <img src="Bilder/Gallery/yung_hurn.jpg" alt="Yung hurn Album Cover" id="5">
                         </a>
                     </li>
                     <li>
                         <a href="shop.html">
-                            <img src="bilder/Mr-Wonderful.jpg" alt="Action Bronson Album Cover" id="6">
+                            <img src="Bilder/Mr-Wonderful.jpg" alt="Action Bronson Album Cover" id="6">
                         </a>
                     </li>
                 </ol>
