--- a/shop.html
+++ b/shop.html
@@ -192,7 +192,7 @@
                         Come over when you're sober
                     </h3>
                     <a href="Bilder/Gallery/Lil_peep_list.png">
-                        <img class="shop-img" src="bilder/Gallery/Lil_peep.jpg" alt="Lil Peep Album cover">
+                        <img class="shop-img" src="Bilder/Gallery/Lil_peep.jpg" alt="Lil Peep Album cover">
                     </a>
                     <p>Come Over When You re Sober Pt. 2 is Lil Peep’s second album, and the first posthumous long form album from the prolific artist The New York Times has described as „at the forefront of bridging hip-hop, emo, pop-punk, and one of the most promising </p>
                     <div class="price-flex">
@@ -213,7 +213,7 @@
                     Random Access Memories
                     </h3>
                     <a href="Bilder/Gallery/Daft_punk_list.png">
-                        <img class="shop-img" src="bilder/Gallery/Daft_punk.jpg" alt="Daft Punk Album cover">
+                        <img class="shop-img" src="Bilder/Gallery/Daft_punk.jpg" alt="Daft Punk Album cover">
                     </a>
                     <p>Random Access Memories is the fourth studio album by French electronic music duo Daft Punk, released on 17 May 2013 by Daft Life and Columbia Records. The album pays tribute to late 1970s and early 1980s American music, particularly from Los Angeles. </p>
                     <div class="price-flex">
@@ -233,7 +233,7 @@
                         Mosaik
                     </h3>
                     <a href="Bilder/Gallery/Camo&Krooked_list.png">
-                        <img class="shop-img" src="bilder/Gallery/Camo&Krooked.jpg" alt="Daft Punk Album cover">
+                        <img class="shop-img" src="Bilder/Gallery/Camo&Krooked.jpg" alt="Daft Punk Album cover">
                     </a>
                     <p>Austrian duo Reinhard Rietsch and Markus Wagner, otherwise known as Camo & Krooked have quickly become one of the hottest production outfits in Europe. Working together since 2007 and signing exclusively to Hospital Records in 2010, the Viennese.</p>
                     <div class="price-flex">
@@ -255,7 +255,7 @@
                     Kiox
                     </h3>
                     <a href="Bilder/Gallery/Kummer_list.png">
-                        <img class="shop-img" src="bilder/Gallery/Kummer.jpg" alt="Daft Punk Album cover">
+                        <img class="shop-img" src="Bilder/Gallery/Kummer.jpg" alt="Daft Punk Album cover">
                     </a>
                     <p>Felix Brummer von Kraftklub tritt unter Kummer erstmalig unter seinem Klarnamen in Erscheinung und hat mit „KIOX“ nicht nur sein erstes Soloalbum angekündigt, sondern sich auch einen Traum erfüllt: den vom eigenen Plattenladen in Chemnitz. </p>
                     <div class="price-flex">
@@ -277,7 +277,7 @@
                         1220 Vie
                     </h3>
                     <a href="Bilder/Gallery/Yung_hurn_list.png">
-                        <img class="shop-img" src="bilder/Gallery/yung_hurn.jpg" alt="Daft Punk Album cover">
+                        <img class="shop-img" src="Bilder/Gallery/yung_hurn.jpg" alt="Daft Punk Album cover">
                     </a>
                     <p>Wege abseits des reinen Hip-Hops schlug Yung Hurn mit der Love Hotel-EP ein, welche von DJ Stickle produziert und im Zuge der Videopremiere zum zugehörigen R&B-Track Rot angekündigt worden war. Am Valentinstag war aus ihr zudem als zweites.</p>
                     <div class="price-flex">
@@ -298,7 +298,7 @@
                         Kamikaze
                     </h3>
                     <a href="Bilder/Gallery/Eminem_list.png">
-                        <img class="shop-img" src="bilder/Gallery/Eminem.jpg" alt="Daft Punk Album cover">
+                        <img class="shop-img" src="Bilder/Gallery/Eminem.jpg" alt="Daft Punk Album cover">
                     </a>
                     <p>Kamikaze is the tenth studio album by American rapper Eminem, released on August 31, 2018 by Aftermath Entertainment, Interscope Records, and Shady Records without prior announcement. The album features guest appearances from Joyner.</p>
                     <div class="price-flex">
